--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-TELEGRAM_BOT_KEY = 1847634006:AAFXHbe3iz7wqaizilzqLnpfF51gqwy-gUw
+TELEGRAM_BOT_NAME = CryptoMonster
+TELEGRAM_BOT_KEY = 1993483589:AAGH2LhWKw039wngLNko-mNw79I5K63Icxk
