mis en place du route help

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 TELEGRAM_BOT_NAME = CryptoMonster
 TELEGRAM_BOT_KEY = 1993483589:AAGH2LhWKw039wngLNko-mNw79I5K63Icxk
+PORT = 443
+APP_URL = https://toutpuissantged.herokuapp.com:443
