--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "coingecko-api": "^1.0.10",
     "dotenv": "^10.0.0",
     "node-telegram-bot-api": "^0.53.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "sqlite3": "^5.0.2"
   },
   "devDependencies": {
     "@types/coingecko-api": "^1.0.2",
