mis en place du system de bigcache

--- a/.env
+++ b/.env
@@ -2,3 +2,7 @@ TELEGRAM_BOT_NAME = CryptoMonster
 TELEGRAM_BOT_KEY = 1993483589:AAGH2LhWKw039wngLNko-mNw79I5K63Icxk
 PORT = 443
 APP_URL = https://toutpuissantged.herokuapp.com:443
+
+DB_NAME = dev.sqlite
+
+DEV_OS_NAME = Windows_NT
