--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 TELEGRAM_BOT_NAME = CryptoMonster
 TELEGRAM_BOT_KEY = 1993483589:AAGH2LhWKw039wngLNko-mNw79I5K63Icxk
+TELEGRAM_BOT_KEY_DEV = 1989380200:AAHrj12VGcfPltKSg1Uo1Y6kFYZYk2fhvCQ
 PORT = 443
 APP_URL = https://toutpuissantged.herokuapp.com:443
 
