--- a/package.json
+++ b/package.json
@@ -15,11 +15,17 @@
     "coingecko-api": "^1.0.10",
     "dotenv": "^10.0.0",
     "node-telegram-bot-api": "^0.53.0",
-    "nodemon": "^2.0.7",
     "sqlite3": "^5.0.2"
   },
   "devDependencies": {
     "@types/coingecko-api": "^1.0.2",
-    "@types/node-telegram-bot-api": "^0.51.4"
+    "@types/node": "^16.9.1",
+    "@types/node-telegram-bot-api": "^0.51.4",
+    "eslint": "^7.32.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "nodemon": "^2.0.12",
+    "prettier": "2.4.1",
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.3"
   }
 }
